--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,123 @@
-.App {
-  text-align: center;
+body {
+  
+  font-family: Arial, sans-serif;
+  background-color: #343541;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.chat-app {
   display: flex;
   flex-direction: column;
+  height: 100vh;
+  background-color: #343541;
+}
+
+.app-bar {
+  display: flex;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: space-between;
+  background-color: #343541;
+  color: #fff;
+  padding: 8px 16px;
+}
+
+.app-bar h1 {
+  margin: 0;
+}
+
+.app-bar button {
+  background-color: transparent;
+  border: none;
+  color: #fff;
+  cursor: pointer;
+  outline: none;
+}
+
+.chat-container {
+  flex: 1;
+  overflow-y: auto;
+  padding: 16px;
+}
+
+
+.message {
+  margin-bottom: 8px;
+  max-width: 80%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  padding: 8px;
+}
+
+.user .message-content {
+  direction: rtl;
+  background-color: #2BB673;
   color: white;
+  border-radius: 15px;
+  padding: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.bot .message-content {
+  direction: ltr;
+  background-color: #F4F5F44D;
+  color: white;
+  border-radius: 15px;
+  padding: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.profile-photo {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+ 
+}
+.icon {
+  font-size: 24px;
+  cursor: pointer;
+  margin: 0 8px;
+}
+.message-text {
+  word-wrap: break-word;
+}
+
+.input-container {
+  display: flex;
+  align-items: center;
+  padding: 8px;
+  border-top: 1px solid #ccc;
+}
+
+input {
+  flex: 1;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  outline: none;
+}
+
+button {
+  margin-left: 8px;
+  padding: 8px 16px;
+  border: none;
+  background-color: #343541;
+  color: #fff;
+  border-radius: 4px;
+  cursor: pointer;
+  outline: none;
+}
+
+.bot-info {
+  display: flex;
+  align-items: center;
+  padding: 16px;
+}
+
+.bot-avatar {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin-right: 8px;
+}
+
+.bot-name {
+  font-weight: bold;
 }
