--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 body {
-  
   font-family: Arial, sans-serif;
   background-color: #343541;
 }
@@ -35,48 +34,49 @@ body {
 .chat-container {
   flex: 1;
   overflow-y: auto;
-  padding: 16px;
+  padding: 4px;
 }
-
 
 .message {
   margin-bottom: 8px;
   max-width: 80%;
   display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
+  align-items: center;
   padding: 8px;
 }
 
 .user .message-content {
-
-  
   flex-direction: row;
-  background-color: #2BB673;
+  background-color: #2bb673;
   color: white;
   border-radius: 15px;
-  padding: 10px;
+  padding: 5px;
+  justify-content: flex-end; /* Align user message content to the right */
 }
 
 .bot .message-content {
-  flex-direction: row-reverse;
-  background-color: #F4F5F44D;
+  flex-direction: row;
+  background-color: #f4f5f44d;
   color: white;
   border-radius: 15px;
-  padding: 10px;
+  padding: 5px;
+  justify-content: flex-start; /* Align bot message content to the left */
 }
 
 .profile-photo {
   width: 30px;
   height: 30px;
+  padding: 7px;
   border-radius: 50%;
- 
 }
+
 .icon {
   font-size: 24px;
   cursor: pointer;
   margin: 0 8px;
+  color: white;
 }
+
 .message-text {
   word-wrap: break-word;
 }
@@ -86,12 +86,13 @@ body {
   align-items: center;
   padding: 8px;
   border-top: 1px solid #ccc;
+  color: #343541;
 }
 
 input {
   flex: 1;
   padding: 8px;
-  border: 1px solid #ccc;
+  border: 1px solid #343541;
   border-radius: 4px;
   outline: none;
 }
@@ -122,4 +123,37 @@ button {
 
 .bot-name {
   font-weight: bold;
+}
+
+
+.typing-indicator {
+  display: inline-block;
+  overflow: hidden;
+  white-space: nowrap;
+  font-size: 12px;
+}
+
+.typing-indicator span {
+  display: inline-block;
+  vertical-align: top;
+  width: 5px;
+  height: 12px;
+  margin-right: 3px;
+  background-color: #ccc;
+  animation: typing-indicator-animation 0.6s infinite;
+}
+
+@keyframes typing-indicator-animation {
+  0% {
+    height: 12px;
+    opacity: 1;
+  }
+  50% {
+    height: 6px;
+    opacity: 0.6;
+  }
+  100% {
+    height: 12px;
+    opacity: 1;
+  }
 }
