--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,7 @@ body {
 .chat-container {
   flex: 1;
   overflow-y: auto;
-  padding: 4px;
+  padding: 2px;
 }
 
 .message {
@@ -66,8 +66,11 @@ body {
 .profile-photo {
   width: 30px;
   height: 30px;
-  padding: 7px;
+  padding: 8px;
   border-radius: 50%;
+}
+.profile-photoU {
+  direction: rtl;
 }
 
 .icon {
